--- a/Curs01/Ex02/index.html
+++ b/Curs01/Ex02/index.html
@@ -16,8 +16,12 @@
 </head>
 
 <body>
-
-
+  <p>
+    Lorem Ipsum
+    Lorem ipsum is placeholder text commonly used in the
+    graphic, print, and publishing industries for
+    previewing layouts and visual mockups.
+  </p>
 
   <div
     class="pixeltab-host"
