--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+  <a
+    href="https://www.google.ro"
+    title="Click aici pentru a naviga spre Google"
+  >Google</a>
+
+  <a
+    href="https://ro.yahoo.com/?p=us&guccounter=1"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Apasa pentru Yahoo!"
+  >Yahoo</a>
 
   <div
     class="pixeltab-host"
