--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -26,7 +26,7 @@
     target="_blank"
     rel="noopener noreferrer"
     title="Apasa pentru Yahoo!"
-  >Yahoo</a>
+  >Yahoo Website</a>
 
   <div
     class="pixeltab-host"
