--- a/Curs02/Ex03/index.html
+++ b/Curs02/Ex03/index.html
@@ -16,11 +16,26 @@
 </head>
 
 <body>
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
+  <img
+    src="images/lvl2/berlin.jpg"
+    alt="Berlin"
+  >
+  <img
+    src="images/cat.jpg"
+    alt="Cat"
+  >
+  <img
+    src="./images/lvl2/swimming.jpg"
+    alt="Swimming"
+  >
+  <img
+    src="images/fashion.jpg"
+    alt="Fashion"
+  >
+  <img
+    src="images/lvl2/tree.jpg"
+    alt="Tree"
+  >
 
   <div
     class="pixeltab-host"
