--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Ordered list</title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,14 @@
 </head>
 
 <body>
+  <ol>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Node.js</li>
+    <li>Git</li>
+    <li>Tailwind (css-in-js)</li>
+    <li>Docker & Kubernetes</li>
+  </ol>
 
 
   <div
