--- a/Curs02/Ex10/index.html
+++ b/Curs02/Ex10/index.html
@@ -30,6 +30,9 @@
     am studiat structura acestora, si am si trecut prin
     cateva elemente de HTML, dar studiul abia a inceput.
   </p>
+  <p>
+    Pana acum am studiat elemente cum ar fi:
+  </p>
   <ul>
     <li>html, body, head</li>
     <li>a</li>
@@ -50,9 +53,7 @@
     <li>style </li>
     <li>script </li>
   </ol>
-
-
-
+  <hr>
 
 
   <div
