--- a/Curs03/Ex08/index.html
+++ b/Curs03/Ex08/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <form>
+  <form name="test">
     <label for="name">Nume</label>
     <input
       type="text"
@@ -36,12 +36,15 @@
     <button
       type="submit"
       name="submit"
+      value="send"
     >Trimite</button>
     <button
       type="reset"
       name="reset"
     >Reseteaza</button>
   </form>
+
+
 
   <div
     class="pixeltab-host"
