--- a/Curs03/Ex10/index.html
+++ b/Curs03/Ex10/index.html
@@ -16,6 +16,42 @@
 </head>
 
 <body>
+  <h1>Tari si diviziunile lor</h1>
+  <form>
+    <fieldset>
+      <legend>Statele unite</legend>
+
+      <select
+        name="us"
+        required
+      >
+        <option value="">--selecteaza--</option>
+        <option value="alabama">Alabama</option>
+        <option value="arkansas">Arkansas</option>
+        <option value="northDakota">North Dakota</option>
+        <option value="newYork">New York</option>
+        <option value="boston">Boston</option>
+      </select>
+    </fieldset>
+
+
+
+    <h3>Canada</h3>
+    <select name="ca">
+      <option value="">--selecteaza--</option>
+      <option value="newfoundland">Newfoundland</option>
+      <option value="ontario">Ontario</option>
+      <option value="quebec">Quebec</option>
+    </select>
+    <hr>
+
+
+    <button
+      type="submit"
+      title="Trimite"
+    >Trimite</button>
+  </form>
+
   <div
     class="pixeltab-host"
     id="html01-03-10"
