--- a/Curs04/Ex04/index.html
+++ b/Curs04/Ex04/index.html
@@ -16,7 +16,58 @@
 </head>
 
 <body>
+  <!-- insert rest of code here -->
+  <p>
+    <a
+      href="/"
+      title="Privacy"
+    >Privacy</a>
+    <a
+      href="/"
+      title="GDPR"
+    >GDPR</a>
+    <a
+      href="/"
+      title="Customer Service"
+    >Customer Service</a>
+    <a
+      href="/"
+      title="Contact"
+    >Contact</a>
+  </p>
 
+  <h2>Newsletter Form</h2>
+
+  <form>
+    <fieldset>
+      <legend>Subscribe:</legend>
+
+      <label>Title:</label>
+      <label for="male">Mr</label>
+      <input
+        type="radio"
+        name="gender"
+        id="male"
+        value="male"
+      >
+
+      <label for="female">Ms</label>
+      <input
+        type="radio"
+        name="gender"
+        id="female"
+        value="female"
+      >
+
+      <label for="na">Unspecified</label>
+      <input
+        type="radio"
+        name="gender"
+        id="na"
+        value="na"
+      >
+    </fieldset>
+  </form>
 
   <div
     class="pixeltab-host"
