--- a/Curs04/Ex04/index.html
+++ b/Curs04/Ex04/index.html
@@ -49,6 +49,7 @@
         name="gender"
         id="male"
         value="male"
+        checked
       >
 
       <label for="female">Ms</label>
@@ -65,7 +66,24 @@
         name="gender"
         id="na"
         value="na"
+      > <br> <br>
+
+
+
+      <input
+        type="checkbox"
+        name="consent"
+        id="consent"
       >
+      <label for="consent">Agree to this and <i>we will send you emails</i>.</label> <br>
+
+
+      <button
+        type="submit"
+        title="Subscribe"
+        id="submit"
+        name="submit"
+      >Subscribe</button>
     </fieldset>
   </form>
 
