--- a/Curs04/Ex04/index.html
+++ b/Curs04/Ex04/index.html
@@ -72,10 +72,10 @@
 
       <input
         type="checkbox"
-        name="consent"
-        id="consent"
+        name="subscribe"
+        id="subscribe"
       >
-      <label for="consent">Agree to this and <i>we will send you emails</i>.</label> <br>
+      <label for="subscribe">Agree to this and <i>we will send you emails</i>.</label> <br>
 
 
       <button
