--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -53,14 +53,101 @@
       </a>
 
       <section class="header-controls">
+        <div class="user-controls">
+          <a
+            href=""
+            title="My Account"
+          >
+            <img
+              src="images/user-avatar.png"
+              alt=""
+            >
+            <i class="fas fa-angle-down"></i>
+          </a>
+        </div>
+        <!-- ./user-controls -->
 
+        <div class="cart-controls">
+          <a
+            href="/"
+            title="Cart"
+          >
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-qty">3</span>
+          </a>
+        </div>
+        <!-- ./cart-controls -->
       </section>
       <!-- ./header-controls -->
     </div>
     <!-- ./header-top -->
 
     <div class="header-bottom">
+      <nav class="nav-primary">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Home"
+            >Home</a>
+          </li>
 
+          <li>
+            <a
+              href=""
+              title="Suits"
+            >Suits</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Shirts"
+            >Shirts</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Accessories"
+            >Accessories</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- ./nav-primary -->
+
+      <nav class="nav-secondary">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Glamour Suits"
+            >Glamour Suits</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Wedding Suits"
+            >Wedding Suits</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Office Suits"
+            >Office Suits</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Customize Your Suit"
+            >Customize Your Suit</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- ./nav-secondary -->
     </div>
     <!-- ./header-bottom -->
   </header>
@@ -72,7 +159,53 @@
   <!-- ./content -->
 
   <footer class="footer">
+    <section class="footer-top">
+      <nav class="footer-nav">
 
+      </nav>
+      <!-- ./footer-nav -->
+
+      <nav class="footer-support">
+
+      </nav>
+      <!-- ./footer-support -->
+
+      <div class="footer-contact">
+        <h2>
+          <span>Thread Affair</span>
+          Milano
+        </h2>
+
+        <p>
+          Largo Augusto 3, Milano, 20122, Milano, IT <br>
+          <a
+            href="tel:0039 02 760 003 66"
+            title="Call us"
+          >Tel: 0039 02 760 003 66</a>
+          <a
+            href="mailto:office@thread-affair.com"
+            title="Email us"
+          >office@thread-affair.com</a>
+        </p>
+      </div>
+      <!-- ./footer-contact -->
+    </section>
+    <!-- ./footer-top -->
+
+    <section class="footer-bottom">
+      <p>
+        ©2021 THREAD AFFAIR. All Rights Reserved.
+      </p>
+
+      <p>
+        Designed by
+        <img
+          src="images/pixellab_logo.jpg"
+          alt="Pixellab - Logo"
+        >
+      </p>
+    </section>
+    <!-- ./footer-bottom -->
   </footer>
   <!-- ./footer -->
 </body>
