started thread affair html

--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -166,7 +166,28 @@
       <!-- ./footer-nav -->
 
       <nav class="footer-support">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Support"
+            ><i class="fas fa-phone-alt"></i>Support</a>
+          </li>
 
+          <li>
+            <a
+              href=""
+              title="Chat"
+            ><i class="far fa-comments"></i>Chat</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Email"
+            ><i class="fas fa-inbox"></i>Email</a>
+          </li>
+        </ul>
       </nav>
       <!-- ./footer-support -->
 
@@ -181,7 +202,7 @@
           <a
             href="tel:0039 02 760 003 66"
             title="Call us"
-          >Tel: 0039 02 760 003 66</a>
+          >Tel: 0039 02 760 003 66</a> <br>
           <a
             href="mailto:office@thread-affair.com"
             title="Email us"
