--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -161,7 +161,161 @@
   <footer class="footer">
     <section class="footer-top">
       <nav class="footer-nav">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Information"
+            >INFORMATION</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Contact Us"
+            >Contact us</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Track my order"
+            >Track my order</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Shipping"
+            >Shipping</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Free retunrs"
+            >Free Returns*</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="My account"
+            >My account</a>
+          </li>
+        </ul>
 
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Information"
+            >INFORMATION</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Contact Us"
+            >Contact us</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Track my order"
+            >Track my order</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Shipping"
+            >Shipping</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Free retunrs"
+            >Free Returns*</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="My account"
+            >My account</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Information"
+            >INFORMATION</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Contact Us"
+            >Contact us</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Track my order"
+            >Track my order</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Shipping"
+            >Shipping</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Free retunrs"
+            >Free Returns*</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="My account"
+            >My account</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Information"
+            >INFORMATION</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Contact Us"
+            >Contact us</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Track my order"
+            >Track my order</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Shipping"
+            >Shipping</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="Free retunrs"
+            >Free Returns*</a>
+          </li>
+          <li>
+            <a
+              href=""
+              title="My account"
+            >My account</a>
+          </li>
+        </ul>
       </nav>
       <!-- ./footer-nav -->
 
