--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -154,7 +154,106 @@
   <!-- ./header -->
 
   <main class="content">
+    <header class="content-header">
+      <h1>Custom Suits</h1>
+      <h2>Get back to work in style</h2>
 
+      <a
+        href=""
+        title="Create your suit"
+      >Create your suit</a>
+
+      <p>
+        A Tailored Suit that will fit you perfectly is a dream for everybody. <br>
+        We provide you with the design and you choose if you like it or if
+        you want to change the details with our online configurator.
+      </p>
+    </header>
+    <!-- ./content-header -->
+
+    <main class="content-main">
+      <section class="catalog-preview">
+        <header>
+          <h1>All time <span>Bestsellers</span></h1>
+
+          <p>
+            Accomplish new achievements with a bold new style
+            from the brilliant collection of men’s designer suits. <br>
+            For the finest custom tailored experience, be sure to explore our selection of premium fabrics
+            from one of the world's oldest fabric mills, Vitale Barberis Canonico.
+          </p>
+        </header>
+
+        <main class="product-tiles">
+          <article class="product-tile">
+            <main class="product-tile-image-container">
+              <picture class="product-tile-image">
+                <a
+                  href=""
+                  title="Thread Affair Traveller Suit"
+                >
+                  <img
+                    src="images/products/product-01a.jpg"
+                    alt="Thread Affair Traveller Suit"
+                  >
+                </a>
+              </picture>
+            </main>
+            <!-- ./product-tile-image-container -->
+
+            <header class="product-tile-details">
+              <h1 class="product-title">
+                <a
+                  href=""
+                  title="Thread Affair Traveller Suit"
+                >
+                  <span>Thread Affair</span>
+                  <span>Traveller</span>
+                  Suit
+                </a>
+              </h1>
+
+              <h2 class="product-subtitle">
+                <a
+                  href=""
+                  title="Thread Affair Traveller Suit"
+                >London fit Semi-slim</a>
+              </h2>
+
+              <div class="product-tile-pricing">
+                <div class="product-catalog-price">499</div>
+
+                <div class="product-price">
+                  USD <span>399</span>
+                </div>
+              </div>
+              <!-- ./product-tile-pricing -->
+            </header>
+            <!-- ./product-tile-details -->
+
+            <footer class="product-tile-controls">
+              <button
+                class="a2c"
+                title="Add to cart"
+              >Add to cart</button>
+            </footer>
+            <!-- ./product-tile-controls -->
+          </article>
+          <!-- ./product-tile -->
+
+        </main>
+        <!-- ./product-tiles -->
+
+        <footer>
+          <a
+            href=""
+            title="See more"
+          >See more</a>
+        </footer>
+      </section>
+      <!-- ./catalog-preview -->
+    </main>
+    <!-- ./content-main -->
   </main>
   <!-- ./content -->
 
