--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -366,7 +366,7 @@
 
       <section class="catalog-preview">
         <header>
-          <h1>All time <span>Bestsellers</span></h1>
+          <h1>New <span>Collection</span></h1>
 
           <p>
             Accomplish new achievements with a bold new style
@@ -555,6 +555,89 @@
         </footer>
       </section>
       <!-- ./catalog-preview -->
+
+      <section class="home-cta">
+        <a
+          href=""
+          title="Want to buy a gift for someone?"
+        >
+          <span>Want to buy <br> a gift for someone?</span>
+
+          <span>
+            <span>Press</span>
+            here
+            <span>for</span>
+            free guidance
+          </span>
+        </a>
+      </section>
+      <!-- ./home-cta -->
+
+      <section class="home-social">
+        <header>
+          <h1>We are <span>social</span>!</h1>
+        </header>
+
+        <main>
+          <ul>
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Facebook"
+              >
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Instagram"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                title="LinkedIn"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Pinterest"
+              >
+                <i class="fab fa-pinterest"></i>
+              </a>
+            </li>
+
+            <li>
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Twitter"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </main>
+      </section>
+      <!-- ./home-social -->
     </main>
     <!-- ./content-main -->
   </main>
