--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -638,6 +638,80 @@
         </main>
       </section>
       <!-- ./home-social -->
+
+      <section class="home-store-locator">
+        <header>
+          <h1>Our <span>stores</span></h1>
+
+          <p>
+            Accomplish new achievements with a bold new style from the brilliant
+            collection of men’s designer suits. <br>
+            For the finest custom tailored experience, be sure to explore our selection
+            of premium fabrics from one of the world's oldest fabric mills, Vitale Barberis Canonico.
+          </p>
+        </header>
+      </section>
+      <!-- ./home-store-locator -->
+
+      <section class="home-payment">
+        <header>
+          <h1>How to <span>pay</span></h1>
+        </header>
+
+        <main>
+          <ul>
+            <li>
+              <img
+                src="images/payment/amazon.jpg"
+                alt="Amazon"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/cirrus.jpg"
+                alt="Cirrus"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/maestro.jpg"
+                alt="Maestro"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/mastercard.jpg"
+                alt="Mastercard"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/paypal.jpg"
+                alt="Paypal"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/visa.jpg"
+                alt="Visa"
+              >
+            </li>
+
+            <li>
+              <img
+                src="images/payment/visa_electron.jpg"
+                alt="VIsa E"
+              >
+            </li>
+          </ul>
+        </main>
+      </section>
+      <!-- ./home-payment -->
     </main>
     <!-- ./content-main -->
   </main>
